# imagegen

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  pyproject.toml  start.sh
apps/api/app/: config.py  db.py  jobs.py  main.py  models.py  runtime.py  schemas.py  security.py  storage.py  worker.py
apps/api/app/routes/: auth.py  exports.py  items.py  projects.py
apps/api/app/services/: assets.py  exports.py  projects.py  qwen.py  render.py  worker_runtime.py
apps/api/scripts/: create_admin.py
apps/api/tests/: test_assets.py  test_auth.py  test_create_admin_script.py  test_health.py  test_jobs.py  test_local_runtime.py  test_projects.py  test_qwen.py  test_render.py  test_routes.py  test_security.py  test_storage.py  test_workflow.py
apps/web/: .env.example  next.config.ts  package.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/src/components/: AppHeader.tsx  CreateProjectForm.test.tsx  CreateProjectForm.tsx  Dashboard.tsx  GeneratedImagesGallery.test.tsx  GeneratedImagesGallery.tsx  LoginForm.test.tsx  LoginForm.tsx  ProjectEditor.test.tsx  ProjectEditor.tsx
apps/web/src/data/: project-assets.json  (+1 more)
docs/superpowers/plans/: 2026-05-23-product-creative-generator.md
docs/superpowers/specs/: 2026-05-23-product-creative-generator-design.md
supabase/: config.toml
supabase/migrations/: 20260523145704_create_product_creative_schema.sql  20260523155145_create_product_creative_schema.sql  20260523155507_limit_creative_instruction_for_qwen.sql
(+10 files in other folders)
