[project]
name = "product-creative-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
