[project]
name = "product-creative-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "cairosvg>=2.9.0",
  "fastapi>=0.115,<1",
  "itsdangerous>=2.2.0",
  "pillow>=12.2.0",
  "psycopg[binary]>=3.3.4",
  "pwdlib[argon2]>=0.3.0",
  "pydantic-settings>=2.14.1",
  "python-multipart>=0.0.29",
  "redis>=7.4.0",
  "rq>=2.9.0",
  "sqlalchemy>=2.0.49",
  "supabase>=2.30.0",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
